--- a/ProgettoWPF/MainWindow.xaml
+++ b/ProgettoWPF/MainWindow.xaml
@@ -32,12 +32,19 @@
         <Label Grid.Column="0" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="48">PASSWORD</Label>
         <PasswordBox Grid.Column="1" Grid.Row="2"  Margin="20" FontSize="35" VerticalAlignment="Center"/>
 
+        <StackPanel Grid.Column="0" Grid.Row="3" Orientation="Horizontal">
+
+            <CheckBox VerticalAlignment="Center" ></CheckBox>
+            <Label VerticalAlignment="Center" FontSize="18">Ricorda Password</Label>
+
+        </StackPanel>
+
         <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
 
             <Button Content="Annulla" Width="200" Margin="5" FontSize="24" Background="#E9967A"/>
             <Button Content="Accedi" Width="200" Margin="5" FontSize="24" Background="AliceBlue"/>
 
-        </StackPanel> 
-        
+        </StackPanel>
+
     </Grid>
 </Window>
